@@ -20,15 +20,15 @@
     <maven-compiler.version>3.8.0</maven-compiler.version>
     <logback.version>1.5.6</logback.version>
     <junit.jupiter.version>5.8.1</junit.jupiter.version>
-    <mockito.version>5.14.2</mockito.version>
+    <mockito.version>5.10.0</mockito.version>
+    <mockito-inline.version>5.2.0</mockito-inline.version>
     <spring-context.version>6.2.1</spring-context.version>
-    <geotools.version>27.2</geotools.version>
     <slf4jjcl.version>2.0.9</slf4jjcl.version>
     <lombok.version>1.18.30</lombok.version>
     <jmh.version>1.37</jmh.version>
-    <hibernate.validator.version>7.0.5.Final</hibernate.validator.version>
-    <jakarta.validation.version>3.0.2</jakarta.validation.version>
-    <jakarta.el.version>4.0.2</jakarta.el.version>
+    <jacoco.version>0.8.11</jacoco.version>
+    <surefire.version>3.1.2</surefire.version>
+    <bytebuddy.version>1.14.11</bytebuddy.version>
   </properties>
 
   <dependencies>
@@ -64,27 +64,6 @@
       <artifactId>gs-algo</artifactId>
       <version>2.0</version>
     </dependency>
-    <!-- geotools -->
-    <dependency>
-      <groupId>org.geotools</groupId>
-      <artifactId>gt-main</artifactId>
-      <version>${geotools.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.geotools</groupId>
-      <artifactId>gt-referencing</artifactId>
-      <version>${geotools.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.geotools</groupId>
-      <artifactId>gt-epsg-hsql</artifactId>
-      <version>${geotools.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.geotools</groupId>
-      <artifactId>gt-geojson</artifactId>
-      <version>${geotools.version}</version>
-    </dependency>
 
     <!-- logging features- -->
 
@@ -93,7 +72,6 @@
       <artifactId>logback-classic</artifactId>
       <version>${logback.version}</version>
     </dependency>
-
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>jcl-over-slf4j</artifactId>
@@ -128,6 +106,24 @@
       <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-inline</artifactId>
+      <version>${mockito-inline.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.bytebuddy</groupId>
+      <artifactId>byte-buddy-agent</artifactId>
+      <version>${bytebuddy.version}</version>
+      <scope>test</scope>
+    </dependency>
 
     <!-- performance testing -->
 
@@ -157,13 +153,6 @@
     </dependency>
 
   </dependencies>
-  <repositories>
-    <repository>
-      <id>osgeo</id>
-      <name>OSGeo Release Repository</name>
-      <url>https://repo.osgeo.org/repository/release/</url>
-    </repository>
-  </repositories>
   <build>
     <plugins>
       <plugin>
@@ -180,8 +169,17 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>${surefire.version}</version>
         <configuration>
-          <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>
+          <argLine>
+            @{argLine}
+            --add-opens java.base/java.lang=ALL-UNNAMED -Djdk.attach.allowAttachSelf=true
+            -XX:+EnableDynamicAgentLoading
+            --add-opens java.base/java.time=ALL-UNNAMED
+            --add-opens java.base/java.util=ALL-UNNAMED -Dnet.bytebuddy.experimental=true
+          </argLine>
+          <useModulePath>false</useModulePath>
+          <testFailureIgnore>false</testFailureIgnore>
         </configuration>
       </plugin>
       <plugin>
@@ -232,7 +230,7 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.11</version>
+        <version>${jacoco.version}</version>
         <executions>
           <execution>
             <goals>
